46: Rename user module and refactor vault script