@@ -14,6 +14,5 @@ done
 >&2 echo "Dependency is up - executing command $cmd"
 
 MEM_FLAGS="-Xms512m -Xmx1024m"
-GCFLAGS="-XX:+PrintGCDetails"
 
 java $MEM_FLAGS -jar /data/application.jar
